<resources>
    <string name="app_name">Android-beginner</string>
    <string name="title_book">Judul Buku</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="name">Putri Syakira Wirdiani</string>
    <string name="email">putrisyakirawirdiani@gmail.com</string>
    <string name="penulis">JK.ROWLING</string>
    <string name="publisher">Penerbit\n</string>
    <string name="price">Harga</string>
    <string-array name="data_price">
        <item>Rp.150.000</item>
        <item>Rp.180.000</item>
        <item>Rp.140.000</item>
        <item>Rp.190.000</item>
        <item>Rp.250.000</item>
        <item>Rp.550.000</item>
        <item>Rp.450.000</item>
        <item>Rp.350.000</item>
        <item>Rp.200.000</item>
        <item>Rp.180.000</item>
        <item>Rp.130.000</item>
    </string-array>
    <string-array name="data_publisher">
        <item>Wizarding World</item>
        <item>Wizarding World</item>
        <item>Wizarding World</item>
        <item>Wizarding World</item>
        <item>Wizarding World</item>
        <item>Wizarding World</item>
        <item>Wizarding World</item>
        <item>Wizarding World</item>
        <item>Gramedia Pustaka</item>
        <item>Gramedia Pustaka</item>
        <item>Gramedia Pustaka</item>


    </string-array>
    <string-array name="data_tittle">
        <item>Harry Potter dan Batu Bertuah</item>
        <item>Harry Potter dan Kamar Rahasia</item>
        <item>Harry Potter dan Piala Api</item>
        <item>Harry Potter dan Tawanan Azkaban</item>
        <item>Harry Potter dan Orde Phoenix</item>
        <item>Harry Potter dan Pangeran Berdarah Campuran</item>
        <item>Harry Potter dan Relikui Kematian</item>
        <item>Harry Potter dan si Anak Terkutuk</item>
        <item>Fantastic Beast : Where to Find Them</item>
        <item>Fantastic Beast : The Crimes of Grindelwald</item>
        <item>Fantastic Beast : The Secret of Dumbledore</item>

    </string-array>
</resources>